crates/service/tests/references/snapshots/features__references__compact_import_enc1_with_ident.snap
---
source: crates/service/tests/references/mod.rs
expression: response
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 17
      },
      "end": {
        "line": 2,
        "character": 21
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 16
      },
      "end": {
        "line": 4,
        "character": 18
      }
    }
  }
]
