crates/service/tests/references/snapshots/features__references__func_in_implicit_module-2.snap
---
source: crates/service/tests/references/mod.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 12
      },
      "end": {
        "line": 2,
        "character": 17
      }
    }
  }
]
