crates/service/tests/references/snapshots/features__references__func_int_idx-2.snap
---
source: crates/service/tests/references/mod.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 14
      },
      "end": {
        "line": 3,
        "character": 15
      }
    }
  }
]
