crates/service/tests/references/snapshots/features__references__global_def_int_idx.snap
---
source: crates/service/tests/references/mod.rs
expression: include_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 5
      },
      "end": {
        "line": 2,
        "character": 11
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 22
      },
      "end": {
        "line": 3,
        "character": 23
      }
    }
  }
]
